Add k8s config maps, autobots-config, and decepticons-config.

--- a/megatron/pom.xml
+++ b/megatron/pom.xml
@@ -75,6 +75,7 @@
                     <execution>
                         <goals>
                             <goal>build</goal>
+                            <goal>push</goal>
                         </goals>
                     </execution>
                 </executions>
