--- a/optimus-prime/pom.xml
+++ b/optimus-prime/pom.xml
@@ -79,6 +79,7 @@
                     <execution>
                         <goals>
                             <goal>build</goal>
+                            <goal>push</goal>
                         </goals>
                     </execution>
                 </executions>
