Add config maps v2 and rolling update.

--- a/decepticons-k8s-configs/megatron.yml
+++ b/decepticons-k8s-configs/megatron.yml
@@ -32,7 +32,7 @@ spec:
          - name: TRANSFORMER_MODE
            valueFrom:
              configMapKeyRef:
-               name: decepticons-config
+               name: decepticons-config-v2
                key: transformer.mode
          livenessProbe:
            httpGet:
