--- a/autobots-k8s-configs/gears.yml
+++ b/autobots-k8s-configs/gears.yml
@@ -32,7 +32,7 @@ spec:
          - name: TRANSFORMER_MODE
            valueFrom:
              configMapKeyRef:
-               name: autobots-config
+               name: autobots-config-v2
                key: transformer.mode
          livenessProbe:
            httpGet:
