* Fix liveness and readiness port to 80 * convert application.properties to application.yml (gears) * Try fabric8-maven-plugin

--- a/decepticons-k8s-configs/megatron.yml
+++ b/decepticons-k8s-configs/megatron.yml
@@ -23,7 +23,7 @@ spec:
          image: rwibawa/megatron:latest
          imagePullPolicy: Never
          ports:
-           - name: http
+           - name: 80
              containerPort: 8080
              protocol: TCP
          env:
@@ -37,7 +37,7 @@ spec:
          livenessProbe:
            httpGet:
              path: /actuator/health
-             port: http
+             port: 80
            initialDelaySeconds: 40
            timeoutSeconds: 1
            periodSeconds: 15
