--- a/autobots-k8s-configs/optimus-prime.yml
+++ b/autobots-k8s-configs/optimus-prime.yml
@@ -37,14 +37,14 @@ spec:
          livenessProbe:
            httpGet:
              path: /actuator/health
-             port: http
+             port: 80
            initialDelaySeconds: 40
            timeoutSeconds: 1
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health
-             port: http
+             port: 80
            initialDelaySeconds: 40
            timeoutSeconds: 1
            periodSeconds: 15
