--- a/autobots-k8s-configs/optimus-prime3.yml
+++ b/autobots-k8s-configs/optimus-prime3.yml
@@ -30,14 +30,14 @@ spec:
        livenessProbe:
          httpGet:
            path: /actuator/health
-           port: http
+           port: 80
          initialDelaySeconds: 40
          timeoutSeconds: 1
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /actuator/health
-           port: http
+           port: 80
          initialDelaySeconds: 40
          timeoutSeconds: 1
          periodSeconds: 15
