--- a/decepticons-k8s-configs/shockwave.yml
+++ b/decepticons-k8s-configs/shockwave.yml
@@ -37,14 +37,14 @@ spec:
          livenessProbe:
            httpGet:
              path: /actuator/health
-             port: http
+             port: 80
            initialDelaySeconds: 40
            timeoutSeconds: 1
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health
-             port: http
+             port: 80
            initialDelaySeconds: 40
            timeoutSeconds: 1
            periodSeconds: 15
