--- a/gears/pom.xml
+++ b/gears/pom.xml
@@ -2,6 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <properties>
+        <docker-tag>1.1</docker-tag>
+        <dekorate.version>0.11-SNAPSHOT</dekorate.version>
+    </properties>
     <parent>
         <groupId>org.transformers</groupId>
         <artifactId>transformers-parent</artifactId>
@@ -13,10 +17,6 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>gears</name>
     <description>Demo project for Spring Boot</description>
-
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -38,6 +38,34 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!--
+        <dependency>
+            <groupId>io.dekorate</groupId>
+            <artifactId>option-annotations</artifactId>
+            <version>${dekorate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.dekorate</groupId>
+            <artifactId>openshift-annotations</artifactId>
+            <version>${dekorate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.dekorate</groupId>
+            <artifactId>kubernetes-annotations</artifactId>
+            <version>${dekorate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.dekorate</groupId>
+            <artifactId>dekorate-spring-boot</artifactId>
+            <version>${dekorate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.dekorate</groupId>
+            <artifactId>kubernetes-spring-starter</artifactId>
+            <version>0.11.6</version>
+        </dependency>
+        -->
     </dependencies>
 
     <build>
@@ -55,11 +83,50 @@
 
             <plugin>
                 <groupId>io.fabric8</groupId>
+                <artifactId>fabric8-maven-plugin</artifactId>
+                <version>4.4.1</version>
+
+                <configuration>
+                    <dockerHost>tcp://hela:2375</dockerHost>
+                    <registry>localhost:32000</registry>
+                    <images>
+                        <image>
+                            <name>rwibawa/${project.artifactId}:${docker-tag}</name>
+                            <alias>${project.artifactId}</alias>
+                            <build>
+                                <from>openjdk:alpine</from>
+                                <assembly>
+                                    <descriptorRef>artifact</descriptorRef>
+                                </assembly>
+                                <cmd>java ${JAVA_OPTS} -jar maven/${project.artifactId}-${project.version}.jar</cmd>
+                            </build>
+                        </image>
+                    </images>
+                </configuration>
+
+                <!-- Connect fabric8:resource, fabric8:build and fabric8:helm to lifecycle phases -->
+                <executions>
+                    <execution>
+                        <id>fabric8</id>
+                        <goals>
+                            <goal>resource</goal>
+                            <goal>build</goal>
+                            <goal>helm</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!--
+            <plugin>
+                <groupId>io.fabric8</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
+                <version>${docker-maven-plugin.version}</version>
+
                 <configuration>
                     <images>
                         <image>
-                            <name>rwibawa/${project.artifactId}</name>
+                            <name>rwibawa/${project.artifactId}:${docker-tag}</name>
                             <alias>${project.artifactId}</alias>
                             <build>
                                 <from>openjdk:alpine</from>
@@ -80,6 +147,16 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.eclipse.jkube</groupId>
+                <artifactId>kubernetes-maven-plugin</artifactId>
+                <version>1.0.0-alpha-1</version>
+                <configuration>
+                    <generateRoute>false</generateRoute>
+                </configuration>
+            </plugin>
+            -->
         </plugins>
     </build>
 
