--- a/gears/pom.xml
+++ b/gears/pom.xml
@@ -160,4 +160,11 @@
         </plugins>
     </build>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub OWNER Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/rwibawa/k8s-config-maps</url>
+        </repository>
+    </distributionManagement>
 </project>
