--- a/gears/pom.xml
+++ b/gears/pom.xml
@@ -163,7 +163,7 @@
     <distributionManagement>
         <repository>
             <id>github</id>
-            <name>GitHub OWNER Apache Maven Packages</name>
+            <name>GitHub rwibawa Apache Maven Packages</name>
             <url>https://maven.pkg.github.com/rwibawa/k8s-config-maps</url>
         </repository>
     </distributionManagement>
