* get docker image from GitHub registry.

--- a/gears/gears/templates/deployment.yaml
+++ b/gears/gears/templates/deployment.yaml
@@ -45,6 +45,8 @@ spec:
             initialDelaySeconds: 180
             successThreshold: 1
           resources:
+      imagePullSecrets:
+        - name: rwibawa-github-docker-register-token
 {{ toYaml .Values.resources | indent 12 }}
     {{- with .Values.nodeSelector }}
       nodeSelector:
