--- a/gears/gears/templates/deployment.yaml
+++ b/gears/gears/templates/deployment.yaml
@@ -19,6 +19,8 @@ spec:
         app.kubernetes.io/name: {{ include "gears.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
+      imagePullSecrets:
+        - name: rwibawa-ehe-ecr-token
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -45,8 +47,6 @@ spec:
             initialDelaySeconds: 180
             successThreshold: 1
           resources:
-      imagePullSecrets:
-        - name: rwibawa-github-docker-register-token
 {{ toYaml .Values.resources | indent 12 }}
     {{- with .Values.nodeSelector }}
       nodeSelector:
